# agram

./: .clang-format  .gitignore  AndroidManifest.xml  ICON_LICENSE  LICENSE  README  README.md  WORDLIST_LICENSE  build.gradle  mangle_scowl.py
assets/: words
cli/: CMakeLists.txt  agram.cc  makefile  xdgwl.cc  xdgwl.h
csrc/: agram_types.h  agram_wc.c  agram_wc.cc  agram_wc.h  anagram.c  anagram.cc  anagram.h  anagram_target.cc  anagram_target.h  anagrams.c  anagrams.cc  anagrams.h  is_anagram.c  is_anagram.cc  is_anagram.h  is_within.cc  lcwc.c  lcwc.cc  lcwc.h  lettercounts.c  lettercounts.cc  lettercounts.h  optional.h  string_view.h  vector.c  vlasub.h  wc.c  wc.cc  wc.h  wordlist.h  wordlist_entry.h  wordlist_source.cc  wordlist_source.h  words_from.cc  words_from.h
gradle/wrapper/: gradle-wrapper.properties
jni/: .gitignore  Android.mk  CMakeLists.txt  agram.c  agram_types.h  agram_wc.c  agram_wc.h  anagram.c  anagram.h  anagrams.c  anagrams.h  array_list.h  astr.c  astr.cc  astr.h  borrowed_jstring_chars.h  is_anagram.c  is_anagram.h  is_within.c  is_within.h  jni.c  jni.cc  jnihelp.c  jnihelp.h  lcwc.c  lcwc.h  lettercounts.c  lettercounts.h  local_ref.h  makefile  marshalled_pointer.h  mlen.h  vector.c  vector.h  wc.c  wc.h  wl_upgrade.c  wl_upgrade.cc  wl_upgrade.h  word.c  (+7 more)
res/values/: strings.xml
src/main/: AndroidManifest.xml
src/main/assets/: words
src/main/java/us/achromaticmetaphor/agram/: About.java  AboutText.java  Anagram.java  AnagramActivity.java  Anagrams.java  FileBrowser.java  Generator.java  MainActivity.java  Native.java  Refreshable.java  Word.java  WordGenerator.java  Wordlist.java  WordlistReader.java  WordsFrom.java
src/main/res/values/: strings.xml
src/us/achromaticmetaphor/agram/: About.java  AboutText.java  Anagram.java  AnagramActivity.java  Anagrams.java  AsyncGenerate.java  FileBrowser.java  Generator.java  LCWC.java  MainActivity.java  Native.java  WL.java  Word.java  WordGenerator.java  WordList.java  Wordlist.java  Words.java  WordsFrom.java
